Closed Bug 1301184 Opened 9 years ago Closed 9 years ago

Correctly handle profiler and hangmonitor notifications when executing APCs

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: bugzilla, Assigned: bugzilla)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

We need to properly notify the profiler and the hangmonitor when a wait function executes an APC, otherwise: 1) The profiler might not sample code that executed in an APC; and 2) The HangMonitor won't be able to detect anything that hung when dispatched via APC.
Attached patch PatchSplinter Review
This is important to ensure that Gecko's internal performance tools work correctly with APCs.
Attachment #8789046 - Flags: review?(jmathies)
Attachment #8789046 - Flags: review?(jmathies) → review+
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Depends on: 1302031
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: