Bug 1301184: Notify the profiler and hang monitor when we're executing APCs; r=jimm

MozReview-Commit-ID: B4nTiAf9GNk